# PR-ComfyUI-FD-Tagger-27ee9c86

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  comfynode.py  config.json  fdtagger.py  inference.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
helpers/: config.py  extension.py  files.py  http.py  logger.py  nodes.py
nodes/: fdtagger.py
redrocket/: classifier.py  image_manager.py  model_manager.py  tag_manager.py
web/js/: fdtagger.js
