[project]
name = "comfyui-fd-tagger"
description = "A furry-friendly ComfyUI extension allowing the interrogation of e621 tags from images."
version = "1.1.0"
license = "LICENSE"
dependencies = ["torch", "torchvision", "pillow", "requests", "comfyui", "aiohttp", "numpy", "msgspec", "colorama"]

[project.urls]
Repository = "https://github.com/loopyd/ComfyUI-FD-Tagger"

[tool.comfy]
PublisherId = "deitydurg"
DisplayName = "ComfyUI-FD-Tagger"
Icon = ""
